Got 'image change when reverse scrolling' working but I don't like where the transition happens. I need to figure out how to align the text vertically so that I can still use 'the top of the div' as the demarcaion in my JavaScript

--- a/article-with-bg-images/styles.css
+++ b/article-with-bg-images/styles.css
@@ -12,8 +12,14 @@ body {
 
 body {background-image: url('images/karsten-wurth-inf1783-189683-unsplash.jpg');}
 
+.page-title {
+	padding-top: 50px;
+	padding-bottom: 50px;
+	text-align: center;
+}
+
 .bgimg {
-  height: 600px;
+  height: 100vh;
 }
 .bgimg__text {
   max-width: 700px;
