--- a/article-with-bg-images/styles.css
+++ b/article-with-bg-images/styles.css
@@ -12,20 +12,34 @@ body {
 
 body {background-image: url('images/karsten-wurth-inf1783-189683-unsplash.jpg');}
 
-.page-title {
-	padding-top: 150px;
-	padding-bottom: 150px;
-	text-align: center;
+.title {
+ padding-top: 150px;
+ padding-bottom: 150px;
+ text-align: center;
+}
+
+/* we need padding on the containng div to prevent the gradient added with JS
+   from stopping before end of scrollable content */
+.pages {
+ padding-bottom: 60vh;
 }
 
 .bgimg {
-  height: 100vh;
+  min-height: 100vh;
 }
 .bgimg__content {
-  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60vh;
+  max-width: 500px;
+}
+@media (min-width: 769px) {
+  .bgimg__content {
+    max-width: 700px;
+  }
 }
 .bgimg__title {
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 }
 .bgimg__text {
   padding-bottom: 50px;
