Trying to add crossfade per https://codepen.io/dudleystorey/pen/qEoKzZ but doesn't seem to be working - though the comment letads me to believe the flash of the background showing through is the waiting for the image to load https://codepen.io/dudleystorey/pen/qEoKzZ

--- a/article-with-bg-images/styles.css
+++ b/article-with-bg-images/styles.css
@@ -8,9 +8,10 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  -webkit-transition:opacity 6s;
+  transition:opacity 6s;
+  background-image: url('images/karsten-wurth-inf1783-189683-unsplash.jpg');
 }
-
-body {background-image: url('images/karsten-wurth-inf1783-189683-unsplash.jpg');}
 
 .title {
  padding-top: 150px;
